# jetson-orin-nano-oled

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: hookup.fzz
jetson/: hdr4-gpio-spi-i2c.dts
src/jetson_orin_nano_oled/: __init__.py  oled_i2c.py  oled_spi.py
